[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9"
itertools = "0.11.0"

[[bin]]
name = "day-1a"

[[bin]]
name = "day-1b"

[[bin]]
name = "day-2a"

[[bin]]
name = "day-3a"

[[bin]]
name = "day-3b"
