[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9"
itertools = "0.11.0"
anyhow = "1.0"

[[bin]]
name = "day-1a"

[[bin]]
name = "day-1b"

[[bin]]
name = "day-2a"

[[bin]]
name = "day-3a"

[[bin]]
name = "day-3b"

[[bin]]
name = "day-4a"

[[bin]]
name = "day-4b"

[[bin]]
name = "day-5a"

[[bin]]
name = "day-5b"

[[bin]]
name = "day-6a"

# 6b could be more easily solved with high-school algebra

[[bin]]
name = "day-7a"
