[package]
name = "aoc-2023"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9"
itertools = "0.11.0"
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "day-1a"

[[bin]]
name = "day-1b"

[[bin]]
name = "day-2a"

[[bin]]
name = "day-3a"

[[bin]]
name = "day-3b"

[[bin]]
name = "day-4a"

[[bin]]
name = "day-4b"

[[bin]]
name = "day-5a"

[[bin]]
name = "day-5b"

[[bin]]
name = "day-6a"

# 6b could be more easily solved with high-school algebra

[[bin]]
name = "day-7a"

[[bin]]
name = "day-7b"

[[bin]]
name = "day-8a"

[[bin]]
name = "day-8b"

[[bin]]
name = "day-9a"

[[bin]]
name = "day-9b"

[[bin]]
name = "day-10a"

[[bin]]
name = "day-10b"

[[bin]]
name = "day-11a"

[[bin]]
name = "day-11b"

[[bin]]
name = "day-12a"

[[bin]]
name = "day-12b"

[[bin]]
name = "day-13a"

[[bin]]
name = "day-13b"

[[bin]]
name = "day-14a"

[[bin]]
name = "day-14b"

[[bin]]
name = "day-15a"

[[bin]]
name = "day-15b"

[[bin]]
name = "day-16"

[[bin]]
name = "day-17"

[[bin]]
name = "day-18"

[[bin]]
name = "day-19"
